src/syntax/snapshots/texlab__syntax__bibtex__tests__entry_complete_parens.snap
---
source: src/syntax/bibtex.rs
expression: "setup(r#\"@article(foo, author = {Foo Bar}, title = {Hello})\"#)"

---
ROOT@0..50
  ENTRY@0..50
    ENTRY_TYPE@0..8 "@article"
    L_PAREN@8..9 "("
    WORD@9..12 "foo"
    COMMA@12..13 ","
    WHITESPACE@13..14 " "
    FIELD@14..32
      WORD@14..20 "author"
      WHITESPACE@20..21 " "
      EQUALITY_SIGN@21..22 "="
      WHITESPACE@22..23 " "
      VALUE@23..32
        TOKEN@23..32
          BRACE_GROUP@23..32
            L_BRACE@23..24 "{"
            WORD@24..27 "Foo"
            WHITESPACE@27..28 " "
            WORD@28..31 "Bar"
            R_BRACE@31..32 "}"
    COMMA@32..33 ","
    WHITESPACE@33..34 " "
    FIELD@34..49
      WORD@34..39 "title"
      WHITESPACE@39..40 " "
      EQUALITY_SIGN@40..41 "="
      WHITESPACE@41..42 " "
      VALUE@42..49
        TOKEN@42..49
          BRACE_GROUP@42..49
            L_BRACE@42..43 "{"
            WORD@43..48 "Hello"
            R_BRACE@48..49 "}"
    R_PAREN@49..50 ")"

