src/syntax/snapshots/texlab__syntax__bibtex__tests__entry_one_field_trailing_comma.snap
---
source: src/syntax/bibtex.rs
expression: "setup(r#\"@article{foo, author = {Foo Bar},}\"#)"

---
ROOT@0..34
  ENTRY@0..34
    ENTRY_TYPE@0..8 "@article"
    L_BRACE@8..9 "{"
    WORD@9..12 "foo"
    COMMA@12..13 ","
    WHITESPACE@13..14 " "
    FIELD@14..32
      WORD@14..20 "author"
      WHITESPACE@20..21 " "
      EQUALITY_SIGN@21..22 "="
      WHITESPACE@22..23 " "
      VALUE@23..32
        TOKEN@23..32
          BRACE_GROUP@23..32
            L_BRACE@23..24 "{"
            WORD@24..27 "Foo"
            WHITESPACE@27..28 " "
            WORD@28..31 "Bar"
            R_BRACE@31..32 "}"
    COMMA@32..33 ","
    R_BRACE@33..34 "}"

